objects/LLC_BI__DocManager__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__ESignature_Email_Message__c</fullName>
        <description>This field contains a default message that will be inserted in the email template that is sent to signers when initiating an e-signature transaction. The field can include Forms syntax to add logic for incorporating nCino field values into the default message, e.g. Loan Officer contact information.</description>
        <label>E-Signature Email Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Team_Sharing_Context__c</fullName>
        <description>The user populates this text field to determine which custom team object the Document Manager record references. By default, this field is blank.</description>
        <inlineHelpText>Enter the name of the custom team object to reference.</inlineHelpText>
        <label>Team Sharing Context</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is optional and automatically populated. It indicates what object the Document Manager is on (for example, LLC_BI__Loan__c).</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docStore__c</fullName>
        <description>This field is not currently used on the DocManager object.</description>
        <label>Document Store</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__namespacePrefix__c</fullName>
        <defaultValue>&quot;LLC_BI&quot;</defaultValue>
        <description>This field is optional. It has a default value of LLC_BI. It should not be changed.</description>
        <label>Namespace Prefix</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__templateFileName__c</fullName>
        <description>This field is not currently used.</description>
        <label>templateFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <description>Testing</description>
        <label>Session Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>DocManager</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocManagers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>